# CoinMiner

./: CMakeLists.txt  https_util.h  main.c  sha1.h  string_util.h  unit_test.h
